# desktop-avatar

./: .env.example  .gitignore  CLAUDE.md  README.md  agent.md  index.html  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
public/: sample-avatar-manifest.json  sample-avatar-packed-manifest.json
public/sample-assets/: female_avatar_1_packed.glb  looking.fbx  searching-files-high.fbx  warrior-idle.fbx
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AvatarStage.tsx  ChatPanel.tsx  DataPanelSlider.tsx  DataTable.tsx  DesktopAvatarWidgetPanel.tsx  KpiCard.tsx  SpeechBubble.tsx  WidgetAreaChart.tsx  WidgetHeader.tsx
src/hooks/: useDesktopCompanion.ts
src/lib/: avatar-animation-selection.ts  avatar-assets.ts  avatar-stage-config.ts  contracts.ts  desktop-avatar-api.ts  desktop-avatar-orchestrator.ts  i18n.ts  router.ts  tauri.ts  vrm-animation.ts  window-layout.ts  window-presets.ts
src/styles/: app.css
src/test/: avatar-animation-selection.test.ts  avatar-assets.test.ts  avatar-build-validation.test.mjs  contracts.test.ts  data-table.test.tsx  desktop-avatar-orchestrator.test.ts  router.test.ts  setup.ts  speech-bubble.test.tsx  tauri.test.ts  use-desktop-companion.test.tsx  widget-area-chart.test.tsx  window-presets.test.ts
tmp/: desktop-avatar-window-state.json
tools/avatar-build/: README.md  avatar-build-validation.mjs  blender-avatar-build.py  run-avatar-build-tripo.mjs  run-avatar-build.mjs  (+1 more)
(+16 files in other folders)
